# camera

./: .gitignore  README.md  fixed.sh  mqcli.py
ebus/install/: 安装说明.txt
fc_control/: CMakeLists.txt  package.xml
fc_control/launch/: control.launch  mapping.json
fc_control/src/: action_coloring.cpp  action_idle.cpp  action_mapping.cpp  fc_control.cpp  fc_control_node.cpp
filr/camera_base-master/: .project
fixed_control/: CMakeLists.txt  README.md  package.xml
fixed_control (copy)/: CMakeLists.txt
fixed_control (copy)/launch/: 2_3071_471.json  control.launch
fixed_control (copy)/src/: fixed_node.cpp  status_control.cpp
fixed_control/launch/: 2_4869_592.json  control.launch  shujia.json  slide_control.launch  task.json
fixed_control/src/: fixed_node.cpp  fsm_node.cpp  slide_control.cpp  slide_node.cpp  status_control.cpp
fixed_decoder/: CMakeLists.txt  install.txt  package.xml
fixed_decoder/include/fixed_decoder/: decoder_h264_node.hpp  rtsp_capture.hpp
fixed_decoder/launch/: 131.launch  infrared.launch  infrared_64.launch  test.launch  visible.launch  visible_14.launch  visible_65.launch  vpf_decode.launch
fixed_decoder/scripts/: rtsp_vpf.py  rtsp_vpf_node.py  vpf_node.py
fixed_decoder/src/: H264Decoder.cpp  base64.cpp  decoder_h264_node.cpp  rtsp_capture.cpp
fixed_hk_camera/: CMakeLists.txt  g2o_camera_lidar_calibration0.yaml  package.xml  ros_install_lib.sh
fixed_hk_camera/launch/: 66color_map_calibration0_-10.yaml  hk_node.launch  infrared_cli.launch  onvif.launch  visible_cli.launch
fixed_hk_camera/scripts/: camera.py  control.py  onvif_sdk.py  test.py
fixed_hk_camera/src/: common.cpp  hk_sdk_control.cpp  hk_sdk_node.cpp  infrared_control.cpp  infrared_node.cpp  visible_control.cpp  visible_node.cpp
fixed_hk_nosdk/: CMakeLists.txt  README.md  package.xml  setup.py
fixed_hk_nosdk/include/fixed_hk_onvif/: visible_control.hpp
fixed_hk_nosdk/launch/: isapi_ptz.launch  isapi_temp.launch  isapi_temp_64.launch  isapi_temp_67.launch  isapi_temp_68.launch  obs_client.launch  rtsp_temp64.launch  rtsp_temp65.launch  rtsp_temp66.launch  rtsp_temp67.launch  rtsp_temp68.launch  show_image.launch
fixed_hk_nosdk/scripts/: isapi.py  isapi_ptz_node.py  isapi_temp_node.py  onvif_ptz.py  rtsp_32f_node.py  rtsp_client.py  rtsp_client_4.py  rtsp_node.py  rtsp_node_4.py  rtsp_tcp_client.py  show_image.py  temp_time_node.py  xml_test.py
fixed_hk_nosdk/scripts/xml/: PixelToPixelParam.xml
fixed_hk_nosdk/src/: infrared_node.cpp  pugixml.cpp
fixed_hk_nosdk/src/hk/: isapi.py  rtsp_client.py
fixed_hk_nosdk_back/launch/: hk.launch  onvif.launch  rtsp_tcp_68.launch  rtsp_temp64.launch  rtsp_temp66.launch  rtsp_temp68.launch
fixed_hk_nosdk_back/scripts/: csv_test.py  isapi.py  obs_node.py  rtsp_32f_node.py  rtsp_client_back.py  rtsp_node.py  rtsp_tcp_node.py
fixed_hk_nosdk_back/src/: common.cpp  infrared_control.cpp
fixed_hk_onvif/: CMakeLists.txt  package.xml
fixed_hk_onvif/launch/: api_ptz.launch  hk.launch  infrared_cli.launch  onvif.launch  raw_temp.launch  visible_cli.launch
fixed_hk_onvif/scripts/: absolute.xml  absoluteEx.xml  api_control.py  auth.py  control.py  isapi.py  isapi_ptz.py  isapi_ptz_node.py  isapi_temp_node.py  onvif_sdk.py  post.py  read_temperature.py  rtsp_client.py  rtsp_node.py
fixed_hk_onvif/src/: common.cpp  infrared_control.cpp  infrared_node.cpp  raw_temp.cpp  raw_temp_node.cpp  visible_control.cpp  visible_node.cpp
fixed_hk_sdk/: CMakeLists.txt  package.xml
fixed_hk_sdk/launch/: hk_node.launch
fixed_hk_sdk/scripts/: camera_control.py  onvif_sdk.py
fixed_hk_sdk/src/: common.cpp  hk_sdk_control.cpp  hk_sdk_node.cpp  infrared_control.cpp  infrared_node.cpp  visible_control.cpp  visible_node.cpp
fixed_infrared/: CMakeLists.txt  package.xml
fixed_infrared/launch/: client.launch
fixed_infrared/src/: common.cpp  infrared_control.cpp  infrared_node.cpp
fixed_msg/: CMakeLists.txt
fixed_msg/debian/: changelog  control  files  rules
fixed_msg/msg/: control_mode.msg  detect_result.msg  inspected_result.msg  platform_transfer.msg  sync_data.msg  task_status.msg
fixed_msg/obj-x86_64-linux-gnu/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
fixed_msg/srv/: cp_control.srv  task.srv  task_control.srv
fixed_shd_camera/: CMakeLists.txt  package.xml
fixed_shd_camera/src/: hk_sdk_control.cpp
fixed_slide_infrared/: CMakeLists.txt  package.xml
fixed_slide_infrared/launch/: client.launch
fixed_slide_infrared/src/: infrared_slide_control.cpp  infrared_slide_node.cpp
fixed_visible/: CMakeLists.txt  package.xml
fixed_visible/cfg/: config.yml
fixed_yd_motor/: CMakeLists.txt  package.xml
fixed_yd_onvif/: CMakeLists.txt  package.xml
fixed_yd_onvif/include/fixed_yd_onvif/: asio_client.hpp  pt_control.hpp  pt_control2.hpp  visible_control.hpp
fixed_yd_onvif/launch/: motor.launch  motor2.launch  onvif.launch
fixed_yd_onvif/scripts/: camera_control.py  control.py
fixed_yd_onvif/src/: common.cpp  pt_control.cpp  pt_control2.cpp  pt_node.cpp  pt_node2.cpp  visible_control.cpp  visible_node.cpp
rtsp_obs/: isapi.py  obs copy.py  obs.py
tio_control/: CMakeLists.txt  README.md  package.xml
tio_control/include/tio_control/: action_coloring.hpp  action_idle.hpp  action_mapping.hpp  action_upload.hpp  common.hpp  fsm.hpp  glod_extension.hpp  string_extension.hpp  task_control.hpp
tio_control/launch/: coloring_test.launch  control.launch  mapping.json  task.json  task_test.json  test.json
tio_control/msg/: task_status.msg
tio_control/src/: action_coloring.cpp  action_idle.cpp  action_mapping.cpp  action_upload.cpp  task_control.cpp  tio_control_node.cpp
tio_control/srv/: coloring_task.srv  control_task.srv  mapping_task.srv
tio_ftp/: CMakeLists.txt  package.xml
tio_ftp/include/ftp/: FTPClient.h
tio_ftp/include/tio_ftp/: ftp_control.hpp  glod_extension.hpp
tio_ftp/launch/: ftp.launch
tio_ftp/msg/: status.msg
tio_ftp/src/: CurlHandle.cpp  FTPClient.cpp  ftp_control.cpp  ftp_node.cpp
tio_ftp/srv/: upload.srv
tio_mqtt_bridge/: CMakeLists.txt  README.md  package.xml
(+150 files in other folders)
